Closed
Bug 162755
Opened 23 years ago
Closed 23 years ago
Crash occurs when attempting to copy entire page source content
Categories
(Camino Graveyard :: Page Layout, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: sfraser_bugs)
References
()
Details
(Keywords: crash)
Attachments
(1 file)
4.10 KB,
text/plain
|
Details |
Build: 2002-08-14-05
Platform: OS X 10.1.5
Expected Results: Selection should be copied to clipboard
What I got: Application crashes
Steps to reproduce:
1) Go to any page.
2) Choose View Page Source from the View menu.
3) Press Command- A to select of the page's content.
4) Press Command- C to copy selection.
5) Crash occurs
Reporter | ||
Comment 1•23 years ago
|
||
Comment 3•23 years ago
|
||
This would probably be a regression from my checkin for bug 159354, checked in
on the 11th (so it would first appear on builds from the 12th).
Comment 5•23 years ago
|
||
well it's not just copying page source...find a webpage only with ALOT of text,
try to copy that text and it crashes.
Assignee | ||
Comment 6•23 years ago
|
||
*** Bug 164277 has been marked as a duplicate of this bug. ***
Reporter | ||
Comment 7•23 years ago
|
||
WFM in the latest build (2002-08-29-05).
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
Assignee | ||
Comment 8•23 years ago
|
||
I can still repro this, on the source of the mozilla site.
Assignee | ||
Comment 10•23 years ago
|
||
Fixed checked in. We were passing a byte count, rather than a character count,
in from the clipboard code.
Status: NEW → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Comment 11•23 years ago
|
||
another good page to test: http://www.w3.org/TR/html4/
You need to log in
before you can comment on or make changes to this bug.
Description
•