Fix bug 162755 -- crash when copying large amounts of text. Fix the length passed in to be a character count, not a byte count. r=bryner.